<resources>

    <!-- main strings !-->
    <string name="app_name">iPirate</string>
    <string name="top_label">iPirate</string>
    <string name="main_menu">Settings</string>
    <string name="movie_title">Movie poster</string>
    <string name="splash_title">i•Pirate</string>
    <string name="splash_movie">Searching for a Movie?</string>
    <string name="edit_message">Enter a Movie to Search</string>
    <string name="splash_tv">or a Show?</string>
    <string name="edit_tv_message">Enter a TV Show to Search</string>
    <string name="button_send">Search</string>
    <string name="button_radarr">Owned Movies</string>
    <string name="button_sonarr">Owned Shows</string>

    <!-- settings strings !-->
    <string name="settings_title">SETTINGS</string>
    <string name="settings_instructions">Fill out the API key or network information noted below and click save at the bottom.</string>
    <string name="tmdb">TMDB: </string>
    <string name="tmdb_api_key">%1$s</string>
    <string name="radarr">Radarr: </string>
    <string name="radarr_api_key">%1$s</string>
    <string name="sonarr">Sonarr: </string>
    <string name="sonarr_api_key">%1$s</string>
    <string name="home_ip_text">Home IP: </string>
    <string name="home_ip">%1$s</string>
    <string name="radarr_text">Radarr Port: </string>
    <string name="radarr_port">%1$s</string>
    <string name="sonarr_text">Sonarr Port: </string>
    <string name="sonarr_port">%1$s</string>
    <string name="sql_text">SQL Port: </string>
    <string name="sql_port">%1$s</string>
    <string name="sql_user_text">SQL User: </string>
    <string name="sql_user">%1$s</string>
    <string name="sql_pass_text">SQL Pass: </string>
    <string name="sql_pass">%1$s</string>
    <string name="settings_update_button">Save</string>

    <!-- other settings !-->
    <string name="tmdb_movies">"tmdbID: %1$s"</string>
    <string name="released">"Released: %1$s"</string>
    <string name="rating">"Rating: %1$s"</string>
</resources>
